# revealshapes

./: ACKNOWLEDGMENT.md  AUTHORS.md  CONTRIBUTING.md  COPYRIGHT  COPYRIGHT.md  ChangeLog.md  INSTALL  Makefile.am  NEWS  README  README.md  aclocal.m4  config.h  configure.ac  libtool  revealshapes.cpp
.github/workflows/: biuild-revealshapes.yml  build-revealshapes-ubuntu-20.04.yml  build-revealshapes-ubuntu-latest.yml  build-revealshapes.yml
config/: config.h.in  config.h.in~
docs/: overview.md
samples/: Opusculum_scanOCR.csv  Opusculum_scanOCR.djvu  Opusculum_scanOCR.dsed
